# Rust-Awesome-Projects

./: README.md
Language-Fundamentals/demo/: pom.xml
Part-1. Fundamentals/: README.md
Part-1. Fundamentals/003.rust_variables/src/: main.rs
Part-1. Fundamentals/004.data_type/src/: main.rs
Part-1. Fundamentals/005.controlFlow/src/: main.rs
Part-1. Fundamentals/006.collectionType/: Cargo.toml
Part-1. Fundamentals/006.collectionType/src/: main.rs
Part-1. Fundamentals/007.stack_heap_pointers/: Cargo.toml
Part-1. Fundamentals/007.stack_heap_pointers/src/: main.rs
Part-1. Fundamentals/008.array/: Cargo.toml
Part-1. Fundamentals/008.array/src/: main.rs
Part-1. Fundamentals/009.loop/: Cargo.toml
Part-1. Fundamentals/009.loop/src/: main.rs  match_colours.rs
Part-1. Fundamentals/010.string/: Cargo.toml
Part-1. Fundamentals/010.string/src/: main.rs
Part-1. Fundamentals/011.vectors/: Cargo.toml
Part-1. Fundamentals/011.vectors/src/: main.rs
Part-1. Fundamentals/012.enum/: Cargo.toml
Part-1. Fundamentals/012.enum/src/: main.rs
Part-1. Fundamentals/Function/: Cargo.toml
Part-1. Fundamentals/Function/src/: main.rs
Part-1. Fundamentals/HelloWorld/: Cargo.toml
Part-1. Fundamentals/controlFlow/: Cargo.toml
Part-1. Fundamentals/data_type/: Cargo.toml
Part-1. Fundamentals/rust_variables/: Cargo.toml
Part-2. SampleProjects/: README.md
Part-2. SampleProjects/SnakeMoving/: Cargo.toml
Part-2. SampleProjects/SnakeMoving/src/: justcube.rs  main.rs
Resource/: Steve_Klabnik_Carol_Nichols_The_Rust_Programming_Language_Covers.epub
(+2 files in other folders)
